welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:1: error: illegal start of simple expression
for (i<-) {
        ^Runner:20: error: ')' expected but '}' found.
	}
        ^